@@ -34,7 +34,8 @@ gam_server_SOURCES =					\
 	gam_connection.h				\
 	gam_excludes.c					\
 	gam_excludes.h					\
-	local_inotify.h
+	local_inotify.h					\
+	gam_debug_lists.c
 
 if ENABLE_INOTIFY
 gam_server_SOURCES += gam_inotify.c gam_inotify.h
